# hermes-trader

./: .agent-config.json  .dockerignore  .env.local.example  .fable-audit-prompt.md  .gitignore  .mover-autopsy.md  ALPHA-PLAN.md  AUDIT.md  DEPLOY.md  Dockerfile  HANDOFF-CODEX-AI-BRAIN.md  LICENSE  README.md  conftest.py  fly.toml  package-lock.json  package.json  pyproject.toml  test_all.py  test_execute.py
app/: globals.css  layout.tsx  page.tsx
components/: HLMarketCard.tsx  HLPositionsPanel.tsx
docs/: AI_BRAIN_OPERATOR_WIRING.md  ARCHITECTURE.md  CONFIG.md  PERF_PLAN.md  TODO.md
hermes_agent/: __init__.py  __main__.py  server.py
hermes_trader/: __main__.py  dashboard.py  metrics.py  positions_snapshot.py  server.py  session_log.py
k8s/: README.md  configmap.yaml  kustomization.yaml  namespace.yaml  secret.example.yaml  service.yaml  servicemonitor.yaml  statefulset.yaml
lib/: aomi-session.ts  hl-client.ts  hyperliquid.ts  openrouter-client.ts  types.ts
scripts/: _bt_candles.py  _memory_io.py  asymmetry_backtest.py  backtest.py  backtest_full.py  backtest_logged.py  backtest_portfolio.py  concentration_backtest.py  config_preset.py  e2e-pipeline-test.mjs  edge_4h_momentum.py  edge_audit.py  edge_barpatterns.py  edge_basis.py  edge_basis_gap.py  edge_beta_neutral_factor.py  edge_blend.py  edge_catalyst.py  edge_combo.py  edge_daycf.py  edge_decision_validate.py  edge_extension.py  edge_factors.py  edge_funding.py  edge_funding_v2.py  edge_high_fip.py  edge_kalman_pairs.py  edge_leadlag_net.py  edge_legends.py  edge_microstructure.py  edge_mom_refine.py  edge_movers.py  edge_pairs.py  edge_pca_statarb.py  edge_portfolio.py  edge_reentry.py  edge_regime_states.py  edge_regime_switch.py  edge_regime_timing.py  edge_reversal_resid.py  (+51 more)
tests/: conftest.py  test_ai_brain.py  test_atr_stop.py  test_book_block_event.py  test_calendar_edges.py  test_claims_registry_and_sizing.py  test_cleanup.py  test_close_and_rehydrate_fixes.py  test_corr_gate.py  test_crash_continue_div_short_live.py  test_crypto_whale.py  (+39 more)
(+384 files in other folders)
