[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermes-agent"
version = "0.1.0"
description = "Autonomous quant trading agent for Hyperliquid perpetual markets"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "httpx>=0.27,<1",
    "pydantic>=2.0",
    "pydantic_settings>=2.0",
    "python-dotenv>=1.0",
    "hyperliquid-python-sdk>=0.23.0",
    "eth-account>=0.13.0",
    "msgpack>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
hermes = "hermes_agent.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["hermes_agent"]
